@@ -1,5 +1,6 @@
 package com.app.japub.controller;
 
+import java.util.Arrays;
 import java.util.List;
 
 import javax.servlet.http.HttpSession;
@@ -13,10 +14,13 @@ import org.springframework.web.servlet.mvc.support.RedirectAttributes;
 
 import com.app.japub.common.MessageConstants;
 import com.app.japub.common.SessionUtil;
+import com.app.japub.common.ViewPathUtil;
 import com.app.japub.domain.dto.BoardDto;
 import com.app.japub.domain.dto.Criteria;
 import com.app.japub.domain.dto.FileDto;
 import com.app.japub.domain.dto.PageDto;
+import com.app.japub.domain.dto.UserDto;
+import com.app.japub.domain.service.admin.AdminService;
 import com.app.japub.domain.service.board.BoardService;
 import com.app.japub.domain.service.comment.CommentService;
 import com.app.japub.domain.service.file.FileService;
@@ -31,76 +35,106 @@ public class BoardController {
 	private final HttpSession session;
 	private final BoardService boardService;
 	private final CommentService commentService;
-	private final UserService userService;
 	private final FileService fileService;
-	private static List<String> CATEGORIES = List.of("free", "upload", "notice");
-	private static final String DEFULT_CATEGORY = "free";
-	public static final List<String> ADMIN_WRITE_CATEGORIES = List.of("notice", "upload");
+	private final AdminService adminService;
+	private final UserService userService;
+	private static final String DEFAULT_CATEGORY = "free";
+	private static final List<String> CATEGORIES = Arrays.asList("free", "notice", "download", "media");
+	private static final List<String> ADMIN_CATEGORIES = Arrays.asList("notice", "media", "download");
+	private static final String BASE_PATH = "board";
+	private static final String LIST_PATH = "list";
+	private static final String WRITE_PATH = "write";
+	private static final String UPDATE_PATH = "update";
+	private static final String DETAIL_PATH = "detail";
 
 	@GetMapping("/list")
-	public String list(Criteria criteria, Model model) {
-		final String referrer = "main";
-		if (criteria.getReferrer() != null && referrer.equals(criteria.getReferrer())) {
-			return "redirect:/main";
-		}
-		if (criteria.getCategory() == null || "".equals(criteria.getCategory())) {
-			criteria.setCategory(DEFULT_CATEGORY);
-		}
+	public void list(Criteria criteria, Model model) {
+		setCategory(criteria);
 		List<BoardDto> boards = boardService.findByCriteria(criteria);
 		boards.forEach(boardService::setBoardRegisterDate);
-		if (isAdminWriteCategory(criteria)) {
-			model.addAttribute("writable", false);
-		}
 		model.addAttribute("boards", boards);
 		model.addAttribute("pageDto", new PageDto(criteria, boardService.countByCriteria(criteria)));
-		return "board/list";
+		model.addAttribute("writable", !ADMIN_CATEGORIES.contains(criteria.getCategory()));
 	}
 
 	@GetMapping("/write")
-	public String write(Criteria criteria, Model model, RedirectAttributes attributes) {
+	public String write(Criteria criteria, RedirectAttributes attributes, Model model) {
 		Long userNum = SessionUtil.getSessionNum(session);
-		if (userNum == null) {
-			return MessageConstants.LOGIN_URL;
+		String result = validateBoardWrite(userNum, criteria, attributes);
+		if (result != null) {
+			return result;
 		}
-
-		if (!validateCategory(criteria)) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.CATEGORY_NOT_FOUND_MSG);
-			return "redirect:/board/list";
-		}
-
-		if (isAdminWriteCategory(criteria) && !SessionUtil.isAdmin(session)) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.CATEGORY_NOT_FOUND_MSG);
-			return "redirect:/board/list" + criteria.getParams();
-		}
-		String userId = userService.findByUserNum(userNum).getUserId();
-		model.addAttribute("userId", userId);
-		return "board/write";
+		addUserIdInModel(model);
+		return ViewPathUtil.getForwardPath(BASE_PATH, WRITE_PATH);
 	}
 
 	@PostMapping("/write")
-	public String write(BoardDto boardDto, Criteria criteria, RedirectAttributes attributes) {
+	public String write(Criteria criteria, BoardDto boardDto, RedirectAttributes attributes) {
 		Long userNum = SessionUtil.getSessionNum(session);
-		if (userNum == null) {
-			return MessageConstants.LOGIN_URL;
-		}
-		if (!validateCategory(criteria)) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.CATEGORY_NOT_FOUND_MSG);
-			return "redirect:/board/list";
-		}
-		if (isAdminWriteCategory(criteria) && !SessionUtil.isAdmin(session)) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.ADMIN_NOT_FOUND_MSG);
-			return "redirect:/board/list" + criteria.getParams();
+		String result = validateBoardWrite(userNum, criteria, attributes);
+		if (result != null) {
+			return result;
 		}
 		boardDto.setUserNum(userNum);
 		boardDto.setBoardCategory(criteria.getCategory());
 		try {
 			boardService.insert(boardDto);
 			attributes.addAttribute("category", criteria.getCategory());
-			return "redirect:/board/list";
+			return ViewPathUtil.getRedirectPath(null, BASE_PATH, LIST_PATH);
+		} catch (Exception e) {
+			addBoardInFlash(attributes, boardDto);
+			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, WRITE_PATH);
+		}
+	}
+
+	@GetMapping("/update")
+	public String update(Criteria criteria, Long boardNum, RedirectAttributes attributes, Model model) {
+		Long userNum = SessionUtil.getSessionNum(session);
+		if (userNum == null) {
+			return MessageConstants.LOGIN_URL;
+		}
+		if (isBoardInModel(model)) {
+			return ViewPathUtil.getForwardPath(BASE_PATH, UPDATE_PATH);
+		}
+		if (boardNum == null) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
+		}
+		BoardDto boardDto = boardService.findByBoardNum(boardNum);
+		if (boardDto == null) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.BOARD_NOT_FOUND_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
+		}
+		boardDto = boardService.findByUserNumAndBoardNum(userNum, boardNum);
+		if (boardDto == null) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.BOARD_NO_PERMISSION_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
+		}
+		Long commentCount = commentService.countByBoardNum(boardNum);
+		boardDto.setBoardCommentCount(commentCount);
+		boardService.setBoardRegisterDate(boardDto);
+		addBoardInModel(model, boardDto);
+		return ViewPathUtil.getForwardPath(BASE_PATH, UPDATE_PATH);
+	}
+
+	@PostMapping("/update")
+	public String update(Criteria criteria, BoardDto boardDto, RedirectAttributes attributes) {
+		Long userNum = SessionUtil.getSessionNum(session);
+		if (userNum == null) {
+			return MessageConstants.LOGIN_URL;
+		}
+		boardDto.setUserNum(userNum);
+		try {
+			boardService.update(boardDto);
+			addBoardNumParam(attributes, boardDto);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, DETAIL_PATH);
 		} catch (Exception e) {
 			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
-			attributes.addFlashAttribute("board", boardDto);
-			return "redirect:/board/write" + criteria.getParams();
+			addBoardInFlash(attributes, boardDto);
+			addBoardNumParam(attributes, boardDto);
+			System.out.println(boardDto);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, UPDATE_PATH);
 		}
 	}
 
@@ -108,21 +142,25 @@ public class BoardController {
 	public String detail(Criteria criteria, Long boardNum, RedirectAttributes attributes, Model model) {
 		if (boardNum == null) {
 			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
-			return "redirect:/board/list" + criteria.getParams();
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 		}
 		BoardDto boardDto = boardService.findByBoardNum(boardNum);
 		if (boardDto == null) {
 			MessageConstants.addErrorMessage(attributes, MessageConstants.BOARD_NOT_FOUND_MSG);
-			return "redirect:/board/list" + criteria.getParams();
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 		}
 		boardService.incrementBoardReadCount(boardNum);
 		boardDto = boardService.findByBoardNum(boardNum);
-		boardDto.setBoardCommentCount(commentService.countByBoardNum(boardNum));
+		Long commentCount = commentService.countByBoardNum(boardNum);
+		boardDto.setBoardCommentCount(commentCount);
 		boardService.setBoardRegisterDate(boardDto);
-		model.addAttribute("board", boardDto);
-		addUserIdToModel(session, model);
+		addBoardInModel(model, boardDto);
+		addUserIdInModel(model);
+		addFilesToModel(model, boardDto);
+		addUserIdToModel(model);
 		SessionUtil.addIsAdminToModel(model, session);
-		return resolveDetailView(criteria, boardNum, model);
+		model.addAttribute("isShowImage", !("download".equals(boardDto.getBoardCategory())));
+		return ViewPathUtil.getForwardPath(BASE_PATH, DETAIL_PATH);
 	}
 
 	@GetMapping("/delete")
@@ -132,92 +170,99 @@ public class BoardController {
 			return MessageConstants.LOGIN_URL;
 		}
 		if (boardNum == null) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
+		}
+		if (boardService.findByBoardNum(boardNum) == null) {
 			MessageConstants.addErrorMessage(attributes, MessageConstants.BOARD_NOT_FOUND_MSG);
-			return "redirect:/board/list" + criteria.getParams();
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 		}
-		if (!boardService.delete(userNum, boardNum)) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
-			attributes.addAttribute("boardNum", boardNum);
-			return "redirect:/board/detail" + criteria.getParams();
+		boolean result = SessionUtil.isAdmin(session) ? adminService.deleteByBoardNum(boardNum)
+				: boardService.delete(userNum, boardNum);
+		if (!result) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.BOARD_NO_PERMISSION_MSG);
 		}
-		return "redirect:/board/list" + criteria.getParams();
+		return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 	}
 
-	@GetMapping("/update")
-	public String update(Criteria criteria, Long boardNum, RedirectAttributes attributes, Model model) {
-		Long userNum = SessionUtil.getSessionNum(session);
+	private String validateBoardWrite(Long userNum, Criteria criteria, RedirectAttributes attributes) {
 		if (userNum == null) {
 			return MessageConstants.LOGIN_URL;
 		}
-		if (model.getAttribute("board") != null) {
-			return "board/update";
+		if (!validateCategory(criteria)) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.CATEGORY_NOT_FOUND_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 		}
-		if (boardNum == null) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
-			return "redirect:/board/list" + criteria.getParams();
+		if (validateAdminCategory(criteria) && !SessionUtil.isAdmin(session)) {
+			MessageConstants.addErrorMessage(attributes, MessageConstants.ADMIN_NOT_FOUND_MSG);
+			return ViewPathUtil.getRedirectPath(criteria, BASE_PATH, LIST_PATH);
 		}
-		BoardDto boardDto = boardService.findByUserNumAndBoardNum(userNum, boardNum);
-		if (boardDto == null) {
-			attributes.addAttribute("boardNum", boardNum);
-			String msg = "해당 게시글을 수정할 수 없습니다.";
-			attributes.addFlashAttribute("msg", msg);
-			return "redirect:/board/list" + criteria.getParams();
-		}
-		boardService.setBoardRegisterDate(boardDto);
-		boardDto.setBoardCommentCount(commentService.countByBoardNum(boardNum));
-		model.addAttribute("board", boardDto);
-		return "board/update";
+		return null;
 	}
 
-	@PostMapping("/update")
-	public String update(Criteria criteria, BoardDto boardDto, RedirectAttributes attributes) {
-		Long userNum = SessionUtil.getSessionNum(session);
-		if (userNum == null) {
-			return MessageConstants.LOGIN_URL;
-		}
-		try {
-			boardDto.setUserNum(userNum);
-			boardService.update(boardDto);
-			attributes.addAttribute("boardNum", boardDto.getBoardNum());
-			return "redirect:/board/detail" + criteria.getParams();
-		} catch (Exception e) {
-			MessageConstants.addErrorMessage(attributes, MessageConstants.ERROR_MSG);
-			attributes.addFlashAttribute("board", boardDto);
-			attributes.addAttribute("boardNum", boardDto.getBoardNum());
-			return "redirect:/board/update";
+	private void setCategory(Criteria criteria) {
+		String category = criteria.getCategory();
+		if (category == null || category.isEmpty()) {
+			criteria.setCategory(DEFAULT_CATEGORY);
 		}
 	}
 
 	private boolean validateCategory(Criteria criteria) {
-		if (criteria.getCategory() == null) {
-			return false;
-		}
-		if (!CATEGORIES.contains(criteria.getCategory())) {
-			return false;
-		}
-		return true;
+		return CATEGORIES.contains(criteria.getCategory());
 	}
 
-	private boolean isAdminWriteCategory(Criteria criteria) {
-		return ADMIN_WRITE_CATEGORIES.contains(criteria.getCategory());
+	private boolean validateAdminCategory(Criteria criteria) {
+		return ADMIN_CATEGORIES.contains(criteria.getCategory());
 	}
 
-	private void addUserIdToModel(HttpSession session, Model model) {
+	private void addBoardInFlash(RedirectAttributes attributes, BoardDto boardDto) {
+		attributes.addFlashAttribute("board", boardDto);
+	}
+
+	private void addBoardInModel(Model model, BoardDto boardDto) {
+		model.addAttribute("board", boardDto);
+	}
+
+	private void addBoardNumParam(RedirectAttributes attributes, BoardDto boardDto) {
+		attributes.addAttribute("boardNum", boardDto.getBoardNum());
+	}
+
+	private void addUserIdInModel(Model model) {
 		Long userNum = SessionUtil.getSessionNum(session);
-		if (userNum != null) {
-			String userId = userService.findByUserNum(userNum).getUserId();
-			model.addAttribute("userId", userId);
+		if (userNum == null) {
+			return;
+		}
+		model.addAttribute("userId", userService.findByUserNum(userNum).getUserId());
+	}
+
+//	private void addFilesToModel(Model model, BoardDto boardDto) {
+//		boolean result = ADMIN_CATEGORIES.contains(boardDto.getBoardCategory());
+//		if (result) {
+//			List<FileDto> files = fileService.findByBoardNum(boardDto.getBoardNum());
+//			files.forEach(fileService::setFilePath);
+//			model.addAttribute("files", files);
+//		}
+//	}
+
+	private void addFilesToModel(Model model, BoardDto boardDto) {
+		List<FileDto> files = fileService.findByBoardNum(boardDto.getBoardNum());
+		if (files != null && !files.isEmpty()) {
+			files.forEach(fileService::setFilePath);
+			model.addAttribute("files", files);
 		}
 	}
 
-	private String resolveDetailView(Criteria criteria, Long boardNum, Model model) {
-		if ("notice".equals(criteria.getCategory())) {
-			List<FileDto> files = fileService.findByBoardNum(boardNum);
-			model.addAttribute("files", files);
-			return "board/notice-detail";
-		} else {
-			return "board/detail";
+	private void addUserIdToModel(Model model) {
+		Long userNum = SessionUtil.getSessionNum(session);
+		if (userNum == null) {
+			return;
 		}
+		UserDto userDto = userService.findByUserNum(userNum);
+		model.addAttribute("userId", userDto == null ? "" : userDto.getUserId());
+	}
+
+	private boolean isBoardInModel(Model model) {
+		return model.getAttribute("board") != null;
 	}
 
 }
